# mk-blog

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
src/apps/articles/: models.py  urls.py  views.py
src/apps/articles/migrations/: 0001_initial.py
src/apps/articles/templates/articles/: article.html  article_detail.html  article_index.html
src/apps/users/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
