[project]
name = "django-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "psycopg>=3.2.4",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-extensions>=3.2.3",
    "isort>=6.0.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "ruff>=0.9.5",
]
