[project]
name = "mk-blog"
version = "0.1.0"
description = "A simple blog application"
authors = [
    { name = "Matus Kocik", email = "matuskocik@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-decouple>=3.8",
    "psycopg[binary]>=2.9.10",
    "django>=5.1.6",
    "wagtail>=6.4",
    "django-modelcluster",
    "django-taggit>=6.1.0",
    "wagtail-localize>=1.11.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "django-extensions>=3.2.3",
    "black>=25.1.0",
    "isort>=6.0.0",
    "ruff>=0.9.5",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["I"]

[tool.uv.sources]
django-modelcluster = { git = "https://github.com/wagtail/django-modelcluster.git" }
